# MS-AT-MeshProcessing

./: BMPRead.h  CMakeLists.txt  Camera.cpp  Camera.h  DenseMatrix.h  DenseMatrix.inl  DiscreteExteriorCalculus.h  DiscreteExteriorCalculus.inl  Edge.h  Face.cpp  Face.h  HalfEdge.cpp  HalfEdge.h  Mesh.cpp  Mesh.h  MeshIO.cpp  MeshIO.h  Quaternion.h  README.md  Shader.cpp  Shader.h  SparseMatrix.cpp  SparseMatrix.inl  Vector.cpp  Vector.h  Vertex.cpp  Vertex.h
cmake/: FindSuiteSparse.cmake
positions/: Application.h  CMakeLists.txt  Viewer.cpp  Viewer.h  main.cpp  options.cpp  options.h  options.h.gch
shaders/: fragment.glsl  vertex.glsl
